adding for Aurora

--- a/gassmass/M87_ALMA_gas_mass_calculation.ipynb
+++ b/gassmass/M87_ALMA_gas_mass_calculation.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "source": [
     "## tl,dr\n",
-    "I get $M_{\\mathrm{H}_2} = (6.19 \\pm 1.53) \\times 10^5~M_\\odot$ assuming a Milky Way $X_\\mathrm{CO} = $"
+    "I get $M_{\\mathrm{H}_2} = (9.04 \\pm 1.3) \\times 10^5~M_\\odot$ assuming a Milky Way $X_\\mathrm{CO} = $"
    ]
   },
   {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -207,7 +207,7 @@
        "<Quantity 904124.8466750141 solMass>"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -239,7 +239,7 @@
        "<Quantity 130784.73575080001 solMass>"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,6 +259,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [Root]",
    "language": "python",
