--- a/gassmass/M87_ALMA_gas_mass_calculation.ipynb
+++ b/gassmass/M87_ALMA_gas_mass_calculation.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "source": [
     "## tl,dr\n",
-    "I get $M_{\\mathrm{H}_2} = (9.04 \\pm 1.3) \\times 10^5~M_\\odot$ assuming a Milky Way $X_\\mathrm{CO} = $"
+    "I get $M_{\\mathrm{H}_2} = (9.04 \\pm 1.3) \\times 10^5~M_\\odot$ assuming a Milky Way $X_\\mathrm{CO}$ and a CO(2-1) to CO(1-0) flux density ratio of 3.2"
    ]
   },
   {
