Adding calculation of flux ratios

--- a/gasmass/M87_ALMA_gas_mass_calculation.ipynb
+++ b/gasmass/M87_ALMA_gas_mass_calculation.ipynb
@@ -55,14 +55,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 112,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import astropy.units as u\n",
-    "import astropy.constants as const"
+    "import astropy.constants as const\n",
+    "\n",
+    "import numpy as np"
    ]
   },
   {
@@ -74,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 113,
    "metadata": {
     "collapsed": false
    },
@@ -93,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 114,
    "metadata": {
     "collapsed": false
    },
@@ -114,22 +116,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 115,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "##### PUT THE REDSHIFT OF YOUR GALAXY HERE ######\n",
-    "\n",
     "redshift = 0.004283 # Redshift of M87\n",
-    "\n",
     "\n",
     "##### PUT YOUR GAUSSIAN AREA IN mJY * km/s HERE #####\n",
     "\n",
     "gaussian_area = 817.015\n",
     "gaussian_area_err = 118.184\n",
-    "\n",
     "\n",
     "##### PUT YOUR CONVERSION FACTOR & RATIO HERE ######\n",
     "\n",
@@ -137,8 +135,6 @@
     "ratio = 3.2  # CO(2-1) to CO(1-0) flux density ratio\n",
     "\n",
     "######################################################\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "emission_integral = (gaussian_area * emission_integral_units_mJy).to(emission_integral_units_Jy)\n",
@@ -154,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 116,
    "metadata": {
     "collapsed": false
    },
@@ -174,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 117,
    "metadata": {
     "collapsed": false
    },
@@ -193,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 118,
    "metadata": {
     "collapsed": false
    },
@@ -207,7 +203,7 @@
        "<Quantity 904124.8466750141 solMass>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 119,
    "metadata": {
     "collapsed": false
    },
@@ -239,7 +235,7 @@
        "<Quantity 130784.73575080001 solMass>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,16 +250,319 @@
    "source": [
     "So the total mass is\n",
     "\n",
-    "$(9.04 \\pm 1.3) \\times 10^5~M_\\odot$"
+    "$(9.0 \\pm 1.3) \\times 10^5~M_\\odot$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Estimating CO(2-1) / H$\\alpha$ flux ratios\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## tl;dr\n",
+    "\n",
+    "**In Box 1**, where we detect CO(2-1) emission, the CO(2-1) flux is\n",
+    "\n",
+    "$F_\\mathrm{Box1} = \\left(5.5 \\pm 0.6\\right) \\times 10^{-18}$ erg s$^{-1}$ cm$^{-2}$ \n",
+    "\n",
+    "for a CO(2-1)-H$\\alpha$ flux ratio of $0.006$. \n",
+    "\n",
+    "\n",
+    "**In Box 2**, closer to the core, we don't detect CO(2-1) flux. The $3\\sigma$ upper limit on the CO(2-1) flux is\n",
+    "\n",
+    "$F_\\mathrm{Box2} < 1.3\\times10^{-18}$ erg s$^{-1}$ cm$^{-2}$ \n",
+    "\n",
+    "for an upper-limit CO(2-1)-H$\\alpha$ flux ratio of $0.001$. \n",
+    "\n",
+    "*Note: These flux ratios assume that Becky's F606N flux is pure H$\\alpha$, which isn't the case. We'll correct this once Becky is able to find the spectra*. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Details of the calculation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In Aurora's Box 1 (i.e., beyond the edge of the lobe, where we see CO flux), \n",
+    "```\n",
+    "box(12:30:51.676,+12:23:05.29,9\",9\",30)```\n",
+    "the emission integral, as measured via CASA by fitting a gaussian to the CO(2-1) line extracted from this box, is"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "box1_ei = 5.55222e+08 * u.mJy * u.Hz\n",
+    "box1_ei_err = 6.08792e+07 * u.mJy * u.Hz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$5.55222 \\times 10^{-18} \\; \\mathrm{\\frac{erg}{s\\,cm^{2}}}$"
+      ],
+      "text/plain": [
+       "<Quantity 5.55222e-18 erg / (cm2 s)>"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "box1_flux = box1_ei.to(u.erg * u.cm**-2 * u.s**-1, equivalencies=u.spectral)\n",
+    "box1_flux"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$6.08792 \\times 10^{-19} \\; \\mathrm{\\frac{erg}{s\\,cm^{2}}}$"
+      ],
+      "text/plain": [
+       "<Quantity 6.08792e-19 erg / (cm2 s)>"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "box1_flux_err = box1_ei_err.to(u.erg * u.cm**-2 * u.s**-1, equivalencies=u.spectral)\n",
+    "box1_flux_err"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "becky_F660N_box1_flux = 8.6e-16 * (u.erg * u.cm**-2 * u.s**-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$0.0064560698 \\; \\mathrm{}$"
+      ],
+      "text/plain": [
+       "<Quantity 0.00645606976744186>"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "box1_flux / becky_F660N_box1_flux"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In Aurora's Box 2 (nearer to M87's core), \n",
+    "```\n",
+    "box(12:30:51.137,+12:23:09.99,9\",9\",30)```\n",
+    "we have a total non-detection. The RMS flux is then \n",
+    "$\\sqrt{N} \\sigma \\Delta v$, where $\\sigma$ is the RMS noise per channel, $\\Delta V$ is the channel width (in Hz), and $N$ is the number of channels over which $>3\\sigma$ emission was detected. The $3\\sigma$ upper limit is then just 3 times this number. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "rms = 2.304e-04 * u.Jy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$0.6912 \\; \\mathrm{mJy}$"
+      ],
+      "text/plain": [
+       "<Quantity 0.6912 mJy>"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rms_mJy = (rms * 3.0).to(u.mJy)\n",
+    "rms_mJy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$36791667 \\; \\mathrm{Hz}$"
+      ],
+      "text/plain": [
+       "<Quantity 36791666.666666664 Hz>"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "channel_width = ((2.2992e+11 * u.Hz) - (2.29037e+11 * u.Hz))/24\n",
+    "channel_width"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "num_channels = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "threesig_upperlimit_flux = (3.0 * (np.sqrt(num_channels) * (rms_mJy) * channel_width)).to(u.erg * u.cm**-2 * u.s**-1, equivalencies=u.spectral)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$1.3214023 \\times 10^{-18} \\; \\mathrm{\\frac{erg}{s\\,cm^{2}}}$"
+      ],
+      "text/plain": [
+       "<Quantity 1.3214023457039872e-18 erg / (cm2 s)>"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "threesig_upperlimit_flux\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "becky_F660N_box2_flux = 1.1e-15 * (u.erg * u.cm**-2 * u.s**-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$0.0012012749 \\; \\mathrm{}$"
+      ],
+      "text/plain": [
+       "<Quantity 0.0012012748597308976>"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "threesig_upperlimit_flux / becky_F660N_box2_flux"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -275,7 +574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
