adding sanity check for Aurora

--- a/gasmass/M87_ALMA_gas_mass_calculation.ipynb
+++ b/gasmass/M87_ALMA_gas_mass_calculation.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -164,17 +164,28 @@
     "    \n",
     "    finalmass = rawmass * u.M_sun\n",
     "    \n",
+    "    print(ldist)\n",
+    "    \n",
     "    \n",
     "    return finalmass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18.403803281981897 Mpc\n",
+      "18.403803281981897 Mpc\n"
+     ]
+    }
+   ],
    "source": [
     "mass = gasmass(redshift=redshift,xco=xco,ratio=ratio,emission_integral=emission_integral)\n",
     "mass_err = gasmass(redshift=redshift,xco=xco,ratio=ratio,emission_integral=emission_integral_err)"
@@ -189,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -203,7 +214,7 @@
        "<Quantity 904124.8466750141 solMass>"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -235,7 +246,7 @@
        "<Quantity 130784.73575080001 solMass>"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -313,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -327,7 +338,7 @@
        "<Quantity 5.55222e-18 erg / (cm2 s)>"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -353,7 +364,7 @@
        "<Quantity 6.08792e-19 erg / (cm2 s)>"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -376,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -390,7 +401,7 @@
        "<Quantity 0.00645606976744186>"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -423,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -437,7 +448,7 @@
        "<Quantity 0.6912 mJy>"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,9 +571,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -574,7 +585,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
